--- a/Yolo_park.ipynb
+++ b/Yolo_park.ipynb
@@ -40,10 +40,10 @@
       "metadata": {
         "colab_type": "code",
         "id": "LNRzAVNy-izy",
-        "outputId": "66be73c9-c8ca-4245-9a28-a0875e7ec61a",
+        "outputId": "d037a922-c9b6-49cf-d0e3-178239d04af5",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 124
+          "height": 34
         }
       },
       "source": [
@@ -51,16 +51,12 @@
         "from google.colab import drive\n",
         "drive.mount('/content/drive')"
       ],
-      "execution_count": 2,
+      "execution_count": 17,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "Go to this URL in a browser: https://accounts.google.com/o/oauth2/auth?client_id=947318989803-6bn6qk8qdgf4n4g3pfee6491hc0brc4i.apps.googleusercontent.com&redirect_uri=urn%3Aietf%3Awg%3Aoauth%3A2.0%3Aoob&scope=email%20https%3A%2F%2Fwww.googleapis.com%2Fauth%2Fdocs.test%20https%3A%2F%2Fwww.googleapis.com%2Fauth%2Fdrive%20https%3A%2F%2Fwww.googleapis.com%2Fauth%2Fdrive.photos.readonly%20https%3A%2F%2Fwww.googleapis.com%2Fauth%2Fpeopleapi.readonly&response_type=code\n",
-            "\n",
-            "Enter your authorization code:\n",
-            "··········\n",
-            "Mounted at /content/drive\n"
+            "Drive already mounted at /content/drive; to attempt to forcibly remount, call drive.mount(\"/content/drive\", force_remount=True).\n"
           ],
           "name": "stdout"
         }
@@ -71,11 +67,11 @@
       "metadata": {
         "id": "LXOJ-sOyiSqs",
         "colab_type": "code",
+        "outputId": "db23b281-9861-433b-b1d0-50157c4dd889",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "e800bd05-0367-4a18-8359-1a3ab7d7eee5"
+        }
       },
       "source": [
         "import glob\n",
@@ -102,11 +98,11 @@
       "metadata": {
         "id": "11sRDwtbiPBT",
         "colab_type": "code",
+        "outputId": "c9ef01e4-518e-48b7-a132-28f8ee5c7f94",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 104
-        },
-        "outputId": "aed245cc-1f9e-458b-be24-42aa339a344d"
+          "height": 86
+        }
       },
       "source": [
         "!pip install Cython\n",
@@ -125,8 +121,7 @@
             "Requirement already satisfied: Cython in /usr/local/lib/python3.6/dist-packages (0.29.7)\n",
             "fatal: destination path 'coco' already exists and is not an empty directory.\n",
             "Requirement already up-to-date: setuptools in /usr/local/lib/python3.6/dist-packages (41.0.1)\n",
-            "Requirement already up-to-date: wheel in /usr/local/lib/python3.6/dist-packages (0.33.4)\n",
-            "mkdir: cannot create directory ‘ak’: File exists\n"
+            "Requirement already up-to-date: wheel in /usr/local/lib/python3.6/dist-packages (0.33.4)\n"
           ],
           "name": "stdout"
         }
@@ -157,7 +152,7 @@
         "\n",
         "\n",
         "def get_test_input(input_dim, CUDA):\n",
-        "    img = cv2.imread(\"test/1.png\")\n",
+        "    img = cv2.imread(\"test_images/1.png\")\n",
         "    img = cv2.resize(img, (input_dim, input_dim)) \n",
         "    img_ =  img[:,:,::-1].transpose((2,0,1))\n",
         "    img_ = img_[np.newaxis,:,:,:]/255.0\n",
@@ -203,7 +198,7 @@
         "    \"\"\"\n",
         "    \n",
         "    \n",
-        "    parser = argparse.ArgumentParser(description='YOLO v3 Video Detection Module')\n",
+        "    parser = argparse.ArgumentParser(description='YOLO v3')\n",
         "   \n",
         "    parser.add_argument(\"--dataset\", dest = \"dataset\", help = \"Dataset on which the network has been trained\", default = \"pascal\")\n",
         "    parser.add_argument(\"--confidence\", dest = \"confidence\", help = \"Object Confidence to filter predictions\", default = 0.5)\n",
@@ -243,11 +238,11 @@
       "metadata": {
         "id": "b3jsrBWnhXOQ",
         "colab_type": "code",
+        "outputId": "0ed6cdfc-2113-41d5-9e94-55483e0411ac",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 86
-        },
-        "outputId": "5a34dd09-9610-42e6-c303-af8d83ff7f5a"
+        }
       },
       "source": [
         "MAX_PARKING = 100\n",
@@ -324,17 +319,17 @@
         "    cv2.imwrite(name, frame)\n",
         "    \n",
         "    \n",
-        "get_freeslots('test/test.png')"
+        "get_freeslots('test_images/4.png')"
       ],
-      "execution_count": 41,
+      "execution_count": 24,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
             "Loading network.....\n",
             "Network successfully loaded\n",
-            "Total cars 38\n",
-            "Total empty spots: 62\n"
+            "Total cars 40\n",
+            "Total empty spots: 60\n"
           ],
           "name": "stdout"
         }
